--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
 <body>
-{% include 'includes/main_menu.html' %}
+{% include 'catalog/includes/main_menu.html' %}
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">Skystore</h1>
