--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'catalog/base.html' %}
 {% block content %}
 <div class="row text-center">
-    {% for product in products %}
+    {% for product in object_list %}
     <div class="col-3">
         <div class="card mb-4 box-shadow">
             <div class="card-header">
