--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -8,6 +8,6 @@
         <p>Добавлен:: {{object.created_at}}</p>
         <p>Обновлен:: {{object.updated_at}}</p>
         <p>Описание: {{object.description}}</p>
-        <p>Изображение: <img src="{{ product.image.url }}"></p>
+        <p>Изображение: <img src="{{ blogpost.image.url }}"></p>
     </div>
 {% endblock %}
