--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -15,7 +15,7 @@
                     <li><img src="{{ product.image.url }}"></li>
                 </ul>
 <!--                <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>-->
-                <a href="{% url 'product_detail' product.id %}" class="btn btn-lg btn-block btn-outline-primary">Купить</a>
+                <a href="{% url 'catalog:product_detail' product.id %}" class="btn btn-lg btn-block btn-outline-primary">Купить</a>
             </div>
         </div>
     </div>
