--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,4 +1,5 @@
 {% extends 'catalog/base.html' %}
+{% load static %}
 {% block content %}
 <div class="row text-center">
     {% for product in object_list %}
@@ -7,15 +8,17 @@
             <div class="card-header">
                 <h4 class="my-0 font-weight-normal">{{ product.product_name }}</h4>
             </div>
-            <div class="card-body">
-                <h1 class="card-title pricing-card-title">{{ product.price }}</h1>
-                <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                    <li>{{ product.category }}</li>
-                    <li>{{ product.description|truncatechars:100 }}</li>
-                    <li><img src="{{ product.image.url }}"></li>
-                </ul>
-<!--                <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>-->
-                <a href="{% url 'catalog:product_detail' product.id %}" class="btn btn-lg btn-block btn-outline-primary">Купить</a>
+            {% if product.image %}
+                <img src="{{ product.image.url }}" alt="{{ product.product_name }}">
+            {% else %}
+                <img src="{% static 'images/default-product.png' %}" alt="No image available">
+            {% endif %}
+            <div class="card-body text-center">
+                <h5 class="card-title pricing-card-title">{{ product.price }}</h5>
+                    <p class="card-text">{{ product.description|truncatechars:100 }}</p>
+                    <a href="{% url 'catalog:product_detail' product.id %}" class="btn btn-lg btn-block btn-outline-primary">Перейти</a>
+                    <a href="{% url 'catalog:product_update' product.id %}" class="btn btn-lg btn-block btn-outline-primary">Редактировать</a>
+                    <a href="{% url 'catalog:product_delete' product.id %}" class="btn btn-lg btn-block btn-outline-primary">Удалить</a>
             </div>
         </div>
     </div>
