--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -13,6 +13,11 @@
     <h1 class="display-4">Skystore</h1>
     <p class="lead">Skystore - это отличный вариант хранения ваших плагинов и примеров кода, который вы бы хотели
         продать</p>
+    {% if user.is_authenticated %}
+    <p>
+        <a class="btn btn-primary" href="{% url 'catalog:product_form' %}" role="button">Создать продукт</a>
+    </p>
+    {% endif %}
 </div>
 
 <div class="container">
